--- a/package.json
+++ b/package.json
@@ -12,26 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "^5.2.7",
+    "@angular/cdk": "^5.2.3",
+    "@angular/common": "5.2.7",
+    "@angular/compiler": "5.2.7",
+    "@angular/core": "5.2.7",
+    "@angular/flex-layout": "^5.0.0-beta.13",
+    "@angular/forms": "5.2.7",
+    "@angular/http": "5.2.7",
+    "@angular/material": "^5.2.3",
+    "@angular/platform-browser": "5.2.7",
+    "@angular/platform-browser-dynamic": "5.2.7",
+    "@angular/router": "5.2.7",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.4",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "ng4-loading-spinner": "^1.1.3",
+    "popper.js": "^1.14.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.3",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
+    "@angular/cli": "1.7.2",
+    "@angular/compiler-cli": "5.2.7",
+    "@angular/language-service": "5.2.7",
     "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
+    "@types/node": "^6.0.102",
+    "codelyzer": "~4.2.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -43,6 +50,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "<2.7"
   }
 }
