AWS-exports file can't be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ Thumbs.db
 appsync-info.json
 aws-info.json
 project-info.json
-aws-exports.js
+#aws-exports.js
 awsmobilejs/.awsmobile/backend-build
 awsmobilejs/\#current-backend-info
 ~awsmobilejs-*/
